dimelo mi compaaaaaa

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>la vida es una mierda!!!</h1>
+    <h1>  te PONGO AQUI UN MENSAJE DE AMISTADh1>
     <h2>omar cara de pija</h2>
     <h3>omar cara de nabo</h3>
 </body>
